fix: Prevent cards and header from overflow on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -176,8 +176,13 @@ footer a {
 
 @media (max-width: 767px) {
     .header {
+        width: auto;
         flex-direction: column;
         padding-left: 64px;
         padding-right: 64px;
+    }
+    
+    .button__bar {
+        flex-wrap: wrap;
     }
 }
